Use java.util.Base64 for Base 64 encoding/decoding